little fix on sidebar and kbd on mobile and some other fix

--- a/src/css/dash/_aside.scss
+++ b/src/css/dash/_aside.scss
@@ -24,13 +24,14 @@ body.siftal.loading-page #sidebar .avatar:before{animation-duration:1s;-webkit-a
 
 
 /* sidenav menu */
-.siftal #sidebar ul.sidenav{font-size:1.4em}
+.siftal #sidebar ul.sidenav{font-size:1.4em;margin-bottom:1em;}
 .siftal #sidebar ul > li{color:#d5d5d5;}
 .siftal #sidebar ul > li.title{background-color:#333;padding:0.5em 1em;}
 .siftal #sidebar ul > li > a{display:block;padding:1.2em 1.5em;color:#d5d5d5;transition:0.3s;cursor:pointer;max-width:300px;margin:0 auto;}
 .siftal #sidebar ul > li > a > i{font-size:1.2em;display:inline-block;width:1.5em;vertical-align:text-bottom;}
 .siftal #sidebar ul > li > a:hover{background-color:rgba(0,0,0,0.3)}
 .siftal #sidebar ul > li > a:focus{background-color:rgba(0,0,0,0.7)}
+.siftal #sidebar ul > li > a:active{background-color:rgba(0,0,0,0.7)}
 .siftal #sidebar ul > li > ul{background-color: #252525;font-size:0.9em}
 .siftal #sidebar ul > li > ul > li{}
 .siftal #sidebar ul > li > ul > li > a{padding:0.7em 2.5em;}
@@ -38,3 +39,4 @@ body.siftal.loading-page #sidebar .avatar:before{animation-duration:1s;-webkit-a
 .rtl.siftal #sidebar ul > li > ul > li > a{padding-left:0;}
 
 .siftal #sidebar ul > li > a.weAreHere{background-color:rgba(0,0,0,0.8);color:#fff}
+
