--- a/src/css/responsive/_mobile.scss
+++ b/src/css/responsive/_mobile.scss
@@ -16,7 +16,7 @@
   .f>.s9{-webkit-box-flex:0;-webkit-flex:0 0 75%;-ms-flex:0 0 75%;-moz-box-flex:0;flex:0 0 75%;max-width:75%}
   .f>.s10{-webkit-box-flex:0;-webkit-flex:0 0 83.333333%;-ms-flex:0 0 83.333333%;-moz-box-flex:0;flex:0 0 83.333333%;max-width:83.333333%}
   .f>.s11{-webkit-box-flex:0;-webkit-flex:0 0 91.666667%;-ms-flex:0 0 91.666667%;-moz-box-flex:0;flex:0 0 91.666667%;max-width:91.666667%}
-  .f>.s12{-webkit-box-flex:0;-webkit-flex:0 0 100%;-ms-flex:0 0 100%;-moz-box-flex:0;flex:0 0 100%;max-width:100%;margin-right:0;margin-left:0;}
+  .f>.s12{-webkit-box-flex:0;-webkit-flex:0 0 100%;-ms-flex:0 0 100%;-moz-box-flex:0;flex:0 0 100%;max-width:100%;margin-right:0;margin-left:0;padding-right:0;padding-left:0;}
   .s-flex{display:-webkit-box!important;display:-webkit-flex!important;display:-ms-flexbox!important;display:-moz-box!important;display:flex!important}
   .s-inline-flex{display:-webkit-inline-box!important;display:-webkit-inline-flex!important;display:-ms-inline-flexbox!important;display:-moz-inline-box!important;display:inline-flex!important}
   .s-row{-webkit-box-orient:horizontal!important;-webkit-box-direction:normal!important;-webkit-flex-direction:row!important;-ms-flex-direction:row!important;-moz-box-orient:horizontal!important;-moz-box-direction:normal!important;flex-direction:row!important}
@@ -48,6 +48,7 @@
   .s-align-content-around{-webkit-align-content:space-around!important;-ms-flex-line-pack:distribute!important;align-content:space-around!important}
   .s-align-content-stretch{-webkit-align-content:stretch!important;-ms-flex-line-pack:stretch!important;align-content:stretch!important}
 
+  kbd {display:none;}
 
   // custom style for another part of siftal
   .siftal header h1 a{padding:0;}
